--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,47 +6,50 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-    sdk: ">=2.17.5 <3.0.0"
+  sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
-    cloud_firestore: ^3.1.18
-    cupertino_icons: ^1.0.2
-    equatable: ^2.0.3
-    eva_icons_flutter: ^3.1.0
-    firebase_core: ^1.18.0
-    flutter:
-        sdk: flutter
-    flutter_bloc: ^8.0.1
-    http: ^0.13.4
-    share_plus: ^4.0.10
-    shared_preferences: ^2.0.15
+  cached_network_image: ^3.2.1
+  cloud_firestore: ^3.1.18
+  cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  eva_icons_flutter: ^3.1.0
+  firebase_core: ^1.18.0
+  firebase_storage: ^10.3.2
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.0.1
+  google_fonts: ^3.0.1
+  http: ^0.13.4
+  share_plus: ^4.0.10
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
-    flutter_lints: ^2.0.0
-    flutter_test:
-        sdk: flutter
+  flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-    uses-material-design: true
-    assets:
-        - assets/images/
-        - assets/i18n/
-    fonts:
-        - family: SF-Pro-Text-Regular
-          fonts:
-              - asset: assets/fonts/SF-Pro-Text-Regular.otf
+  uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/i18n/
+  fonts:
+    - family: SF-Pro-Text-Regular
+      fonts:
+        - asset: assets/fonts/SF-Pro-Text-Regular.otf
 
-        - family: SF-Pro-Text-Bold
-          fonts:
-              - asset: assets/fonts/SF-Pro-Text-Bold.otf
+    - family: SF-Pro-Text-Bold
+      fonts:
+        - asset: assets/fonts/SF-Pro-Text-Bold.otf
 
-        - family: Calibre-Semibold
-          fonts:
-              - asset: assets/fonts/Calibre Semibold.otf
+    - family: Calibre-Semibold
+      fonts:
+        - asset: assets/fonts/Calibre Semibold.otf
 
-        - family: CustomIcons
-          fonts:
-              - asset: assets/fonts/custom_icons.ttf
+    - family: CustomIcons
+      fonts:
+        - asset: assets/fonts/custom_icons.ttf
